# A-kua

./: Cargo.toml  README.md  blog_index.toml
src/: bean.rs  main.rs  route.rs
src/site/: akua.rs  blog.rs  guide.rs  polite.rs
src/sites/: akua.rs  blog.rs  guide.rs  mod.rs  polite.rs
src/structs/: mod.rs  template.rs
static-css/: blog_index.css  blog_post.css
static-js/: highlight.min.js  highlightjs-copy.min.js  hightlight.js
static-post/: LSPatch.md  LSPatch.toml  blog_post.toml  test.md
templates/: blog_index.html  blog_post.html
