[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.37"
actix-web = "4.5.1"
actix-files = "0.6.5"
tokio = "1.36.0"
serde = { version = "1.0.197", features = ["derive"] }
futures = "0.3.30"